--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,10 +143,7 @@ jobs:
         pdm venv create --with-pip --force $PYTHON
         pdm install -G testing -G email
 
-    # TODO: remove this once `pdm` fixes issue erroring on lack of homepage for some packages
-    # See https://github.com/pydantic/pydantic/actions/runs/9670225358/job/26678544555?pr=9743
-    # For an example
-    - run: pdm info && pdm list -v || true
+    - run: pdm info && pdm list
 
     - run: 'pdm run python -c "import pydantic.version; print(pydantic.version.version_info())"'
 
