--- a/pyproject.toml
+++ b/pyproject.toml
@@ -246,3 +246,10 @@ skip = '.git,env*,pydantic/v1/*'
 # `ser` - abbreviation for "ser"ialisation
 # `crate` - a rust crate
 ignore-words-list = 'gir,ser,crate'
+
+[tool.codeflash]
+module-root = "pydantic"
+tests-root = "tests"
+test-framework = "pytest"
+ignore-paths = []
+formatter-cmd = ["ruff check --exit-zero --fix $file", "ruff format $file"]
