--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -20,7 +20,7 @@ jobs:
           configuration-path: '.github/labels/first_pass.yml'
 
       - id: add-default-if-no-labels
-        if: ${{ contains(steps.label-PR-by-branch-name.outputs.all-labels, 'relnotes') || contains(steps.label-PR-by-branch-name.outputs.all-labels, 'documentation') }}
+        if: ${{ !contains(steps.label-PR-by-branch-name.outputs.all-labels, 'relnotes') && !contains(steps.label-PR-by-branch-name.outputs.all-labels, 'documentation') }}
         uses: actions/labeler@v5
         with:
           configuration-path: '.github/labels/default_pass.yml'
