Fix pyproject.toml typo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,7 +145,7 @@ testing-extra = [
     "sqlalchemy>=2.0,<3.0; python_version < '3.13'",
     "greenlet>=3.0.0rc3; python_version < '3.13'",
     # See: https://docs.python.org/3/library/zoneinfo.html#data-sources
-    'tzdata; platform_system = "Windows"',
+    'tzdata; platform_system == "Windows"',
 ]
 mypy = [
     "mypy",
