--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,8 @@ dependencies = [
     'typing-extensions>=4.12.2; python_version >= "3.13"',
     'annotated-types>=0.4.0',
     "pydantic-core==2.20.1",
+    # See: https://docs.python.org/3/library/zoneinfo.html#data-sources
+    'tzdata; python_version >= "3.9"',
 ]
 dynamic = ['version', 'readme']
 
@@ -144,8 +146,6 @@ testing-extra = [
     # TODO: remove bound once sqlalchemy supports 3.13
     "sqlalchemy>=2.0,<3.0; python_version < '3.13'",
     "greenlet>=3.0.0rc3; python_version < '3.13'",
-    # See: https://docs.python.org/3/library/zoneinfo.html#data-sources
-    'tzdata; platform_system == "Windows"',
 ]
 mypy = [
     "mypy",
