minor simplification idea

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ _build/
 /codecov.sh
 /coverage.lcov
 .coverage
-test.py
+test*.py
+test*.prof
+test*.svg
 run_mypy_on_file.py
 
 # Documentation files
