Add support for `ZoneInfo` (#9896)
Co-authored-by: yfares1 <yfares1@bloomberg.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,8 @@ dependencies = [
     'typing-extensions>=4.12.2; python_version >= "3.13"',
     'annotated-types>=0.4.0',
     "pydantic-core==2.20.1",
+    # See: https://docs.python.org/3/library/zoneinfo.html#data-sources
+    'tzdata; python_version >= "3.9"',
 ]
 dynamic = ['version', 'readme']
 
