--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,7 +205,7 @@ jobs:
           pdm install -G testing
 
       - name: install example plugin
-        run: pdm add ./tests/plugin
+        run: pdm add ./tests/plugin -v
 
       - run: pdm run pytest ./tests/plugin
         env:
