--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,9 @@ docs = [
     "mkdocs-embed-external-markdown>=2.3.0",
     "pytest-examples>=0.0.11",
     "pydantic-settings>=2.0b1",
-    "pydantic-extra-types @ git+https://github.com/pydantic/pydantic-extra-types.git@main"
+    "pydantic-extra-types @ git+https://github.com/pydantic/pydantic-extra-types.git@main",
+    # Not available before v3.8.6, hence the pin here, as it's required by griffe
+    "backports-strenum==1.3.1; python_version >= '3.8.6' and python_version < '3.11'"
 ]
 linting = [
     "eval-type-backport>=0.1.3",
