--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,7 +197,7 @@ jobs:
       - uses: pdm-project/setup-pdm@v4
         with:
           python-version: '3.12'
-          cache: false
+          cache: true
 
       - name: install deps
         run: |
@@ -205,7 +205,7 @@ jobs:
           pdm install -G testing
 
       - name: install example plugin
-        run: pdm add ./tests/plugin -v
+        run: pdm add ./tests/plugin --no-cache -v
 
       - run: pdm run pytest ./tests/plugin
         env:
