--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,8 +205,7 @@ jobs:
           pdm install -G testing
 
       - name: install example plugin
-        # TODO: can we remove the cache clear?
-        run: pdm add ./tests/plugin -v
+        run: pdm add ./tests/plugin
 
       - run: pdm run pytest ./tests/plugin
         env:
