--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,7 @@ testing = [
     "faker>=18.13.0",
     "pytest-benchmark>=4.0.0",
     # TODO: remove bound once pytest-codspeed supports 3.13, blocked by `python-cffi`
-    "pytest-codspeed~=2.2.0; python_version < '3.13'",
+    "pytest-codspeed==2.2.1",
     "packaging>=23.2",
 ]
 testing-extra = [
