Validate bytes based on ser_json_bytes (pydantic/pydantic-core#1308)
Original-commit-hash: 57e69918670016c4cf00a844aabcf76bb0cd458f

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ num-bigint = "0.4.6"
 python3-dll-a = "0.2.10"
 uuid = "1.9.1"
 jiter = { version = "0.5", features = ["python"] }
+hex = "0.4.3"
 
 [lib]
 name = "_pydantic_core"
