Initial stab at architeture docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,6 +147,7 @@ nav:
     - Semantic Version: api/pydantic_extra_types_semantic_version.md
     - Timezone Name: api/pydantic_extra_types_timezone_name.md
     - ULID: api/pydantic_extra_types_ulid.md
+- Architecture: architecture.md
 - Examples:
   - Secrets: examples/secrets.md
   - Validators: examples/validators.md
