chore: momentaneously install coverage[toml]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -348,6 +348,7 @@ jobs:
 
       - name: Debug coverage file
         run: |
+          pip install coverage[toml]
           ls -la
           coverage report
 
