--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -341,10 +341,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download coverage data
+      - name: Get coverage files
         uses: actions/download-artifact@v4
         with:
-          name: coverage-data
+          merge-multiple: true
+          pattern: coverage-*
+          path: coverage
 
       - name: Debug coverage file
         run: |
@@ -357,6 +359,12 @@ jobs:
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MERGE_COVERAGE_FILES: true
+
+      - name: Debug coverage file
+        run: |
+          ls -la
+          coverage report
 
       - name: Store coverage comment
         uses: actions/upload-artifact@v4
