--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -348,12 +348,6 @@ jobs:
           pattern: coverage-*
           path: coverage
 
-      - name: Debug coverage file
-        run: |
-          pip install coverage[toml]
-          ls -la
-          coverage report
-
       - name: Generate coverage comment
         id: coverage-comment
         uses: py-cov-action/python-coverage-comment-action@v3
@@ -363,7 +357,8 @@ jobs:
 
       - name: Debug coverage file
         run: |
-          ls -la
+          pip install coverage[toml]
+          ls -la coverage
           coverage report
 
       - name: Store coverage comment
