chore: add trivial change to trigger new workflow run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -355,7 +355,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MERGE_COVERAGE_FILES: true
 
-      - name: Debug coverage file
+      - name: Debug coverage output
         run: |
           pip install coverage[toml]
           ls -la coverage
