chore: trigger new workflow run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -348,7 +348,7 @@ jobs:
           pattern: coverage-*
           path: coverage
 
-      - name: List files
+      - name: List all files
         run: ls -la
 
       - name: Generate coverage comment
