--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,7 @@ linting = [
 testing = [
     "cloudpickle",
     "coverage[toml]",
+    "pytz",
     "dirty-equals",
     "eval-type-backport",
     "pytest>=8.2.2",
