--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -249,6 +249,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: true
         allow-python-prereleases: true
+        # TODO: remove this once https://github.com/pdm-project/pdm/issues/3107 has been addressed
+        version: '2.17.3'
 
     - name: install deps
       run: |
