Deprecate passing a dict to the `Examples` class
Add the necessary deprecation and user warnings
Update tests

--- a/tests/pyright/pyproject.toml
+++ b/tests/pyright/pyproject.toml
@@ -3,3 +3,4 @@ extraPaths = ['../..']
 reportUnnecessaryTypeIgnoreComment = true
 pythonVersion = '3.10'
 enableExperimentalFeatures = true
+reportDeprecated = true
