Use a default of `Any` for the `ImportString` type var
The runtime behavior is to allow anything if `ImportString`
isn't parametrized. We reflect this by providing a default
value to the type variable, so that type checkers don't
complain on missing parametrization.

--- a/tests/pyright/pyproject.toml
+++ b/tests/pyright/pyproject.toml
@@ -4,3 +4,4 @@ reportUnnecessaryTypeIgnoreComment = true
 pythonVersion = '3.10'
 enableExperimentalFeatures = true
 reportDeprecated = true
+reportMissingTypeArgument = true
