change up wording

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -479,14 +479,25 @@ jobs:
               consumer_secret=os.getenv("TWITTER_CONSUMER_SECRET"),
           )
           version = os.getenv("VERSION").strip('"')
-          tweet = os.getenv("TWEET").format(version=version)
+
+          if "b" in version:
+              # replace anything after the b
+              official_version = version[:version.index("b")]
+              tweet = os.getenv("BETA_TWEET").format(version=version, official_version=official_version)
+          else:
+              tweet = os.getenv("TWEET").format(version=version)
+
           client.create_tweet(text=tweet)
         env:
           VERSION: ${{ needs.release.outputs.pydantic-version }}
           TWEET: |
             Pydantic version {version} is out! 🎉
 
-            Please try v{version} in the next week before we release an official version,
+            https://github.com/pydantic/pydantic/releases/tag/v{version}
+          BETA_TWEET: |
+            Pydantic beta version {version} is out! 🚀
+
+            Please try v{version} in the next week before we release v{official_version},
             and let us know if you encounter any issues!
 
             https://github.com/pydantic/pydantic/releases/tag/v{version}
