Ensure coverage data artifact is correctly uploaded
Github released a new version of the `actions/upload-artifact@v4`
action, now discarding hidden files (starting with a `.`).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -316,6 +316,7 @@ jobs:
         with:
           name: coverage-data
           path: .coverage
+          include-hidden-files: true
 
       - name: Store coverage html
         uses: actions/upload-artifact@v4
