--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -70,10 +70,13 @@ jobs:
           python-version: '3.10'
 
       - name: install
+      # note, we manually override the pydantic-core version to use `main` for the docs build,
+      # but we don't want to change this in pyproject.toml bc the version should be bound there (and in pdm)
         run: |
           pdm venv create --with-pip --force $PYTHON
           pdm install -G docs
           pdm run python -m pip install --extra-index-url https://pydantic:${PPPR_TOKEN}@pppr.pydantic.dev/simple/ mkdocs-material
+          pdm run python -m pip install git+https://github.com/pydantic/pydantic-core.git@main
         env:
           PPPR_TOKEN: ${{ secrets.PPPR_TOKEN }}
 
