--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         pdm venv create --with-pip --force $PYTHON
         pdm install -G docs
-        pdm run python -m pip install git+https://github.com/pydantic/pydantic-core.git@main
+        pdm run python -m pip install git+https://github.com/pydantic/pydantic-core.git@main --force-reinstall
 
     - run: pdm run python -c 'import docs.plugins.main'
 
