--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -76,7 +76,7 @@ jobs:
           pdm venv create --with-pip --force $PYTHON
           pdm install -G docs
           pdm run python -m pip install --extra-index-url https://pydantic:${PPPR_TOKEN}@pppr.pydantic.dev/simple/ mkdocs-material
-          pdm run python -m pip install git+https://github.com/pydantic/pydantic-core.git@main
+          pdm run python -m pip install git+https://github.com/pydantic/pydantic-core.git@main --force-reinstall
         env:
           PPPR_TOKEN: ${{ secrets.PPPR_TOKEN }}
 
