Modify schema creation benchmarks to focus on schema building

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -217,8 +217,7 @@ pydocstyle = { convention = 'google' }
 [tool.ruff.lint.extend-per-file-ignores]
 "docs/**/*.py" = ['T']
 "tests/**/*.py" = ['T', 'E721', 'F811']
-"tests/benchmarks/test_fastapi_startup_generics.py" = ['UP006', 'UP007']
-"tests/benchmarks/test_fastapi_startup_simple.py" = ['UP006', 'UP007']
+"tests/benchmarks/**/*.py" = ['UP006', 'UP007']
 
 [tool.ruff.format]
 quote-style = 'single'
