--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,13 +51,15 @@ dependencies = [
     'typing-extensions>=4.12.2; python_version >= "3.13"',
     'annotated-types>=0.6.0',
     "pydantic-core==2.23.2",
-    # See: https://docs.python.org/3/library/zoneinfo.html#data-sources
-    'tzdata; python_version >= "3.9"',
 ]
 dynamic = ['version', 'readme']
 
 [project.optional-dependencies]
 email = ['email-validator>=2.0.0']
+timezone = [
+    # See: https://docs.python.org/3/library/zoneinfo.html#data-sources
+    'tzdata; python_version >= "3.9" and sys_platform == "win32"',
+]
 
 [project.urls]
 Homepage = 'https://github.com/pydantic/pydantic'
