--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,8 +147,13 @@ nav:
     - ULID: api/pydantic_extra_types_ulid.md
 - Architecture: architecture.md
 - Examples:
-  - Secrets: examples/secrets.md
-  - Validators: examples/validators.md
+  - Validating File Data: examples/files.md
+  - Web and API Requests: examples/requests.md
+  - Queues: examples/queues.md
+  - LLMs: examples/llms.md
+  - CLIs: examples/clis.md
+  - Databases: examples/orms.md
+  - Custom Validators: examples/custom_validators.md
 - Error Messages:
   - Error Handling: errors/errors.md
   - Validation Errors: errors/validation_errors.md
@@ -232,7 +237,7 @@ plugins:
       'usage/rich.md': 'integrations/rich.md'
       'usage/linting.md': 'integrations/linting.md'
       'usage/types.md': 'concepts/types.md'
-      'usage/types/secrets.md': 'examples/secrets.md'
+      'usage/types/secrets.md': 'api/types.md#pydantic.types.Secret'
       'usage/types/string_types.md': 'api/types.md#pydantic.types.StringConstraints'
       'usage/types/file_types.md': 'api/types.md#pydantic.types.FilePath'
       'api/main.md': 'api/base_model.md'
@@ -288,3 +293,5 @@ plugins:
       'blog/pydantic-v2-alpha.md': 'https://blog.pydantic.dev/blog/2023/04/03/pydantic-v2-pre-release/'
       'blog/pydantic-v2-final.md': 'https://blog.pydantic.dev/blog/2023/06/30/pydantic-v2-is-here/'
       'blog/pydantic-v2.md': 'https://blog.pydantic.dev/blog/2022/07/10/pydantic-v2-plan/'
+      'examples/secrets.md': 'api/types.md#pydantic.types.Secret'
+      'examples/validators.md': 'examples/custom_validators.md'
