--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ docs = [
     "autoflake",
     "mkdocs",
     "mkdocs-exclude",
-    "mkdocs-material",
+    "mkdocs-material[imaging]",
     "mkdocs-redirects",
     "mkdocstrings-python",
     "tomli",
@@ -136,7 +136,7 @@ testing = [
     "pytest-examples",
     "faker>=18.13.0",
     "pytest-benchmark>=4.0.0",
-    # TODO: remove bound once pytest-codspeed supports 3.13, blocked by `python-cffi`
+    # TODO: remove bound once pytest-codspemked supports 3.13, blocked by `python-cffi`
     "pytest-codspeed~=2.2.0; python_version < '3.13'",
     "packaging>=23.2",
     "jsonschema>=4.23.0",
