Adding social previews integration (#10542)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ docs = [
     "autoflake",
     "mkdocs",
     "mkdocs-exclude",
-    "mkdocs-material",
+    "mkdocs-material[imaging]",
     "mkdocs-redirects",
     "mkdocstrings-python",
     "tomli",
